# winston

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_LICENSES.md
.github/workflows/: docs.yml
docs/: Doxyfile  build.sh  requirements.txt
docs/sphinx/: conf.py  index.rst
docs/sphinx/_ext/: cpp_toc_overloads.py
docs/sphinx/_static/: custom.css
docs/sphinx/api/: container.rst  default-logger.rst  format.rst  formats.rst  index.rst  levels.rst  log-info.rst  logger.rst  transports.rst
docs/sphinx/examples/: custom-format.rst  index.rst  request-scoped-child.rst  two-transports.rst
docs/sphinx/getting-started/: installation.rst  quickstart.rst
docs/sphinx/guides/: catch-uncaught-exceptions.rst  custom-levels.rst  filter-or-drop-in-format.rst  index.rst  named-logger-container.rst  per-transport-level.rst
docs/sphinx/tutorials/: correlate-requests-with-child-loggers.rst  index.rst  profile-expensive-work.rst  ship-logs-to-multiple-transports.rst
examples/: custom_format.cpp  request_scoped_child.cpp  two_transports.cpp
include/polycpp/winston/: child_logger.hpp  colorizer.hpp  console_transport.hpp  container.hpp  events.hpp  exception_handler.hpp  file_transport.hpp  format.hpp  level_config.hpp  log_info.hpp  logger.hpp  profiler.hpp  stream_transport.hpp  transport.hpp  winston.hpp
include/polycpp/winston/detail/: aggregator.hpp  child_logger.hpp  colorizer.hpp  console_transport.hpp  container.hpp  exception_handler.hpp  file_transport.hpp  format.hpp  level_config.hpp  log_info.hpp  logger.hpp  profiler.hpp  stream_transport.hpp  transport.hpp  winston.hpp
include/polycpp/winston/detail/formats/: align.hpp  cli.hpp  colorize.hpp  errors.hpp  json.hpp  label.hpp  logstash.hpp  metadata.hpp  ms.hpp  pad_levels.hpp  pretty_print.hpp  printf.hpp  simple.hpp  splat.hpp  stringify_util.hpp  timestamp.hpp  uncolorize.hpp
include/polycpp/winston/formats/: align.hpp  cli.hpp  colorize.hpp  errors.hpp  json.hpp  label.hpp  logstash.hpp  metadata.hpp  ms.hpp  pad_levels.hpp  pretty_print.hpp  printf.hpp  simple.hpp  splat.hpp  timestamp.hpp  uncolorize.hpp
src/: winston.cpp
tests/: test_colorizer.cpp  test_console_transport.cpp  test_container.cpp  test_default_logger.cpp  test_exception_handler.cpp  test_file_transport.cpp  test_format.cpp  test_format_builtins.cpp  test_level_config.cpp  test_log_info.cpp  test_logger.cpp  test_stream_transport.cpp  test_transport.cpp  test_winston.cpp
